--- a/src/scss/framework/bootstrap/_variables.scss
+++ b/src/scss/framework/bootstrap/_variables.scss
@@ -36,7 +36,8 @@ $grays: (
 // fusv-enable
 
 // scss-docs-start color-variables
-$blue:    #0d6efd !default;
+// $blue:    #0d6efd !default;
+$blue:    #004e9f !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #d63384 !default;
@@ -45,7 +46,7 @@ $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
 $green:   #198754 !default;
 $teal:    #20c997 !default;
-$cyan:    #0dcaf0 !default;
+$cyan:    #4A75BA !default;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
